examples/negative/patterns/arm_type_mismatch.kai
# Negative fixture (#520 / patterns): a `match` arm body has a
# different type than the other arms. Typer must reject with a
# type-mismatch diagnostic anchored at the offending arm body.

fn f(b: Bool) : Int = match b {
  true -> 1
  false -> "two"
}

fn main() : Int = f(true)
